tests/field/get_on_str.rev
"str".bar // error: only structure instances have properties